--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name:  Wordenful
 description: A blog of joy
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/ivonasto/blogofkrisy/master/images/wp2298143.jpg
 
 #
 # Flags below are optional
